// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register tablet slice 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`2. lead one and one tablet slice 1`] = `
<div>
  <div>
    <TileU
      tileName="lead"
    />
    <TileC
      tileName="support"
    />
  </div>
</div>
`;

exports[`3. lead one full width tablet slice 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`4. lead two no pic and two tablet slice 1`] = `
<div>
  <div>
    <TileX
      tileName="lead1"
    />
    <div />
    <TileY
      tileName="lead2"
    />
    <div />
    <TileD
      tileName="support1"
    />
    <div />
    <TileZ
      tileName="support2"
    />
  </div>
</div>
`;

exports[`5. secondary one tablet slice 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`6. secondary four tablet slice 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`7. secondary one and columnist 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`8. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <TileV
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileV
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <TileG
      tileName="support1"
    />
  </div>
  <div />
  <div>
    <TileG
      tileName="support2"
    />
  </div>
</div>
`;

exports[`9. secondary two no pic and two slice 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;
